--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,6 +33,12 @@ body {
   margin-top: 20px;
 }
 
+.nav_ul_item {
+  padding-left: 25px;
+  float: left;
+  margin-top: 20px;
+}
+
 .center {
   text-align: center;
 }
@@ -99,4 +105,9 @@ span.picture {
 
 .show_recipe {
   margin: 10px 10px 10px 10px;
+}
+
+ul
+{
+    list-style-type: none;
 }
