cleanup UI and stylesheet

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -92,6 +92,11 @@ input, textarea, select, .uneditable-input {
   margin-bottom: 15px;
 }
 
+.input_checkbox input
+{
+  width: auto !important;
+}
+
 input {
   height: auto !important;
 }
@@ -109,5 +114,6 @@ span.picture {
 
 ul
 {
-    list-style-type: none;
+  list-style-type: none;
 }
+
