--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
-  <h1>Welcome to MyRecipes App</h1>
+  <h1>Share your Recipes</h1>
   
-  <h2>This is the home page for the Professional Ruby on Rails Developer COurse on Udemy</h2>
+  <h2>Sign up now to learn how to make amazing dishes from our top chefs!</h2>
 
   <%= link_to "Sign up now!", register_path, class: "btn btn-lg btn-success" %>
 </div>
@@ -23,9 +23,9 @@
   </div>
   <div class="col-lg-4">
     <h3 class="midrow">
-      View Recipes as Guest User
+      Redriect to another page
     </h3>
-    <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
+    <h2 class="left">Any page you want</h2>
     <p><%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %></p>
   </div>
 </div>
